fix: game.prefs from ISO_8859_1 to UTF_8